--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,9 @@ name = "gum-mcp"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
-    "gum",
+    "gum-ai>=0.1.0",
     "mcp[cli]>=1.8.1",
 ]
-
-[tool.uv.sources]
-gum = { git = "https://github.com/GeneralUserModels/gum/" }
