--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "gum-mcp"
+name = "gumcp"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
+requires-python = ">=3.13"
 dependencies = [
-    "dotenv>=0.9.9",
     "gum-ai>=0.1.0",
     "mcp[cli]>=1.8.1",
 ]
